# software-testing

./: .gitignore  README.md  requirements.txt
src/part3/degree_conversion/: main.py  test_degree_conversion.py
src/part3/do_nothing/: main.py  test_do_nothing.py
src/part3/is_adult/: main.py  test_main.py
src/part3/queue/: main.py  test_queue.py
src/part3/shipping_fees/: main.py  test_main.py
src/part3/todo/: test_todo_list.py  todo_list.py
src/part4/joke_api/: util.py
src/part4/joke_api/license-venv/: pyvenv.cfg
src/part4/joke_api/tests/integration/: conftest.py  test_routes.py
src/part4/joke_app/: test_joke_app.py
src/part4/joke_fixtures/: jokes.py  util.py
src/part4/joke_fixtures/tests/: conftest.py  submission_conftest.py  test_joke_service.py  test_util.py
src/part4/rf-katas/: .gitignore
src/part4/rf-katas/robot/: common.resource  invalid_login.robot  login.robot
src/part4/sql_joke_api/: main.py  model.py  pyproject.toml  tables.sql
src/part4/sql_joke_api/tests/: data_builder.py  util.py
src/part4/sql_joke_api/tests/integration/: conftest.py  test_routes.py
src/part5/banking/: coverage-results.yml  savings_account.py  setup.cfg
src/part5/banking/tests/: test_bank_account.py  test_savings_account.py
src/part5/k6/: README.md  pyproject.toml  requests_per_second_log.csv  script.js  server.py
src/project1/: project1.md
